--- a/.env.example
+++ b/.env.example
@@ -10,17 +10,16 @@ APP_TIMEZONE=UTC
 FORCE_HTTPS=true
 SESSION_DRIVER=array
 
+API_URL_PREFIX=api
 L5_SWAGGER_UI_PERSIST_AUTHORIZATION=true
 L5_SWAGGER_DOC_TITLE="Generic API"
 L5_SWAGGER_DOC_VERSION=1.0
 L5_SWAGGER_DOC_DESCRIPTION="Generic API micro-service"
 L5_SWAGGER_DOC_CONTACT=contact@kairnial.com
-L5_SWAGGER_DOC_HOST="${APP_URL}"
+L5_SWAGGER_DOC_HOST="${APP_URL}/${API_URL_PREFIX}"
 L5_SWAGGER_DOC_LOGIN_URL=https://oauth-support.kairnial.io/api/oauth2/login
 
-API_URL_PREFIX=api
 APP_CORS_ORIGINS=http://localhost:5173,http://127.0.0.1:5173
-
 JWT_TOKEN_AUDIENCE=sensitive_data_removed
 
 DB_CONNECTION=pgsql
